[package]
name = "maintain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
globset = "0.4.10"
prettyplease = "0.2.6"
proc-macro2 = { version = "1.0.60", features = ["span-locations"], default-features = false }
syn = { version = "2.0.18", features = ["visit", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
walkdir = "2.3.3"
