[package]
name = "maintain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
globset = "0.4.10"
ignore = "0.4.20"
indoc = "2.0.1"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
proc-macro2 = { version = "1.0.60", features = ["span-locations"], default-features = false }
syn = { version = "2.0.18", features = ["visit", "full"] }
